--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div class="col-xl-8 container-fluid bg-warning  bg-opacity-50">
 	<center>
 		<p><h1>It Defines the content of the Web Pages</h1></p>
-		<p><a class="nav-link bg-primary text-dark" href="file:///C:/Users/GodisLoveAlways/Desktop/ICT%2020223/4th%20quarter/wrong%20answer.html">CSS</a></p>
+		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/wrong-page/">CSS</a></p>
 		<p><a class="nav-link bg-primary text-dark" href="file:///C:/Users/GodisLoveAlways/Desktop/ICT%2020223/4th%20quarter/page%203.html">HTML</a></p>
-		<p><a class="nav-link bg-primary text-dark" href="file:///C:/Users/GodisLoveAlways/Desktop/ICT%2020223/4th%20quarter/wrong%20answer.html">Java Script</a></p>
-		<p><a class="nav-link bg-primary text-dark" href="file:///C:/Users/GodisLoveAlways/Desktop/ICT%2020223/4th%20quarter/wrong%20answer.html">Table</a></p>
+		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/wrong-page/">Java Script</a></p>
+		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/wrong-page/">Table</a></p>
 	<center>
 	</div>
 	<div class="col-xl-2"></div>
