--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<center>
 		<p><h1>It Defines the content of the Web Pages</h1></p>
 		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/wrong-page/">CSS</a></p>
-		<p><a class="nav-link bg-primary text-dark" href="file:///C:/Users/GodisLoveAlways/Desktop/ICT%2020223/4th%20quarter/page%203.html">HTML</a></p>
+		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/page3/">HTML</a></p>
 		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/wrong-page/">Java Script</a></p>
 		<p><a class="nav-link bg-primary text-dark" href="https://chrisdentomas.github.io/wrong-page/">Table</a></p>
 	<center>
